--- a/team.html
+++ b/team.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Our Team</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="images/logo.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,12 +15,10 @@
         </div>
         <div id="snddiv">
  <ul style="font-weight: 600;">
-    <li><a href=""></a>
+    <li><a href="index.html"  >Home</a>
     </li>
-    <li><a href="index.html">Home</a>
-    </li>
-    <li><a href="about.html" style="color: #2f3f85;">About</a></li>
-    <li><a href="services.html">Services</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="services.html" style="color: #2f3f85;">Services</a></li>
     <li><a href="team.html">Team</a></li>
  </ul>
         </div>
@@ -46,7 +44,7 @@
         <div style="text-align: center;margin-bottom: 40px;">
           <img src="images/logo.png" alt=""> 
         </div>
-        <a href="index.html" >Home</a>
+        <a href="index.html" onclick="location.reload(); return false;">Home</a>
 
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
@@ -57,32 +55,22 @@
        
       </div>
 
-<section id="talk">
-<div>
-  <h2 style="font-size: 40px;">About us</h2>  
-<p>Founded in 2021, Maridom Global Services Limited is a trusted provider of tires, lubricants, and fleet solutions across Nigeria. With over a decade of industry experience, we understand the unique challenges of Nigerian roads and fleet operations.</p>
-<p>We serve transport, logistics, construction, and industrial sectors with premium tires, expert technical support, and reliable nationwide distribution. Our mission is simple: to keep fleets moving safely, efficiently, and cost-effectively
-</p>
-<button>Request quote</button>
-   <div id="card2">
-            <div>
-          <p><b>10+ Years</b></p>  
-<p>Experience</p>
-            </div>
-            <div>
-<p><b>1000+</b></p>
-<p>Fleet Clients</p>
-            </div>
-            <div>
-<p><b>Nationwide</b></p>
-<p>Delivery</p>
-            </div>
-         </div>
-</div>
-<div>
-    <img src="images/Frame 26.png" alt="frame26">
-</div>
+<section>
+     <div id="bg2" style="background-image: url(images/6d7e73ca220f440968b0751d97bd6e3ce3fe9a56.jpg);">
+        <div class="bgcover2" style="text-align: center;">
+           <div>
+    <h1>Meet Our Team</h1> 
+<p>The strength of Maridom lies in the people who power our vision, strategy, and solutions for Nigeria’s fleets
+       </p>  <br>
+          <a href="contact.html" >Get in touch</a>
+
+         
+           </div>
+        </div>
+      </div>
+
 </section>
+
 
 <div>
     <img src="images/Frame 15.png" alt="frame" id="partners">
@@ -90,63 +78,12 @@
 
 
 
-
-
-
-<div class="what">
- <h2>What Makes Us Different</h2>  
-<p>At Maridom, we don’t just sell products we deliver solutions.</p>
-</div>
-
-<section id="services2">
-    <div>
-        <h3>Quality Products</h3>
-        A wide selection of premium tires and accessories designed for safety, durability, and performance
-    </div>
-    <div>
-        <h3>Expert Support</h3>
-        From driver training to cost-per-kilometre analysis and scrap evaluation, we help fleets reduce costs and extend tire life
-    </div>
-    <div>
-        <h3>Nationwide Reach</h3>
-        With reliable sales and distribution, we ensure timely delivery across Nigeria
-    </div>
-     <div>
-        <h3>Customer Focus</h3>
-        Our goal is to relieve stress for fleet operators by offering tailored, performance-driven solutions that keep businesses moving
-     </div>
-    <div>
-        <h3>Decade of Experience</h3>
-        Backed by years of industry knowledge, we understand Nigeria’s unique road and fleet challenges
-    </div>
-    <div>
-        <h3>Comprehensive</h3>
-        Beyond tires, we also provide lubricants, batteries, and value-added services for complete fleet care
-    </div>
-</section>
-
-<section id="talk">
-
-<div>
-    <img src="images/Frame 26 (1).png" alt="frame26">
-</div>
-<div>
-   <h2>Our vision</h2> 
-<p>Our vision is to be the tire solution centre for the Nigerian fleet operators for unwavering commitment to excellence,innovation,and customer satisfaction. We aim to expand our presence and diversify our opertions thereby get easy access to retailing and also distribution.
-</p>
-<h2>Our mission</h2>
-<p>Our mission is to provide top –quality tires and value added after sales services to meet our customers standards and needs within Nigerian fleet operators. While delivering a relaible, durable and safe performance-driven tire solutions in the industry
-</p>
-</div>
-</section>
-
-<article style="background-color: #13182F;">
-<div class="what" style="color: #ffffff;">
+<div class="what" >
  <h2>Our Team Members</h2>  
 <p>Our expert team combines industry knowledge and dedication to deliver trusted fleet solutions</p>
 </div>
 
-<section id="talk2" style="background-color: #13182F;">
+<section id="talk2" >
     <div>
         <img src="images/Gemini_Generated_Image_8lj08s8lj08s8lj0 1.png" alt="">
 <div>
@@ -183,26 +120,21 @@
         </div>
     </div>
 </section>
-</article>
-<div class="what">
- <h2>Featured Products</h2>  
-</div>
-
 
 
 
 <section id="talk">
-<div style="font-weight: 500;">
-  <p style="font-size: 30px;">Our Newsletter</p>  
-<p style="font-size: 20px;">Stay updated with the latest property listings, market tips, and exclusive cashback deals.</p>
+<div>
+  <h1>Join Our Team</h1>  
+<p>Passionate about the automotive and fleet industry? We’re always open to talent that can drive innovation and service excellence
+</p>
+
+
+<a href="contact.html"><button>Contact us</button></a>
+   <a href="contact.html" > <button style="background-color: #fff;color: #13182F;border: 1px solid #13182F;"> Send CV</button>  </a>   
 </div>
 <div>
-    <form action="" id="signup" >
-        <label for="">Sign up</label>
-        <input type="text" placeholder="Full Name">
-        <input type="email" placeholder="Email">
-        <input type="submit" value="Subscribe" class="sub">
-    </form>
+    <img src="images/6d7e73ca220f440968b0751d97bd6e3ce3fe9a56.jpg" alt="frame26">
 </div>
 </section>
 
@@ -219,32 +151,31 @@
 +234 9078299910</p>
   <p><i class="fa fa-envelope" style="font-size:15px;color:orangered;padding-right: 10px;"></i>g.iboro@maridom.org, corporate@maridom.org</p>
 
-  <div style="display:flex;align-items:center;gap:10px;">
-  <a href="https://www.facebook.com/share/1C89Amqo7U/?mibextid=wwXIfr" target="_blank" 
+   <div style="display:flex;align-items:center;gap:10px;">
+  <a href="" target="_blank" 
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-facebook-f"></i>
   </a>
 
-  <a href="https://www.instagram.com/aim4thestarsuk?igsh=MXh4endtZXRsNmM0dA%3D%3D&utm_source=qr" target="_blank" 
+  <a href="" target="_blank" 
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-instagram"></i>
   </a>
 
-  <a href="https://x.com/yourhandle" target="_blank"
+  <a href="" target="_blank"
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-x-twitter"></i>
   </a>
 
-  <a href="https://www.tiktok.com/@yourhandle" target="_blank"
+  <a href="" target="_blank"
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-tiktok"></i>
   </a>
 </div>
-
 </div>
 
 <div class="footer-links">
