--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="snddiv">
  <ul style="font-weight: 600;">
-    <li><a href="index.html" onclick="location.reload(); return false;">Home</a>
+    <li><a href="index.html"  style="color: #2f3f85;">Home</a>
     </li>
     <li><a href="about.html">About</a></li>
     <li><a href="services.html">Services</a></li>
@@ -104,7 +104,7 @@
 </section>
 
 <div>
-    <img src="images/Frame 15.png" alt="frame" width="100%">
+    <img src="images/Frame 15.png" alt="frame" id="partners">
 </div>
 
 <div class="what">
@@ -301,6 +301,32 @@
    <p><i class="fa fa-phone" style="font-size:15px;color:orangered;padding-right: 10px;"></i>+234 7039198377,
 +234 9078299910</p>
   <p><i class="fa fa-envelope" style="font-size:15px;color:orangered;padding-right: 10px;"></i>g.iboro@maridom.org, corporate@maridom.org</p>
+
+   <div style="display:flex;align-items:center;gap:10px;">
+  <a href="" target="_blank" 
+     style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
+     border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
+     <i class="fab fa-facebook-f"></i>
+  </a>
+
+  <a href="" target="_blank" 
+     style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
+     border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
+     <i class="fab fa-instagram"></i>
+  </a>
+
+  <a href="" target="_blank"
+     style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
+     border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
+     <i class="fab fa-x-twitter"></i>
+  </a>
+
+  <a href="" target="_blank"
+     style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
+     border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
+     <i class="fab fa-tiktok"></i>
+  </a>
+</div>
 </div>
 
 <div class="footer-links">
