--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
     <li><a href="about.html" style="color: #2f3f85;">About</a></li>
     <li><a href="services.html">Services</a></li>
     <li><a href="team.html">Team</a></li>
+      <li><a href="contact.html" >Contact</a></li>
  </ul>
         </div>
         <div style="text-align: center;">
@@ -97,33 +98,39 @@
  <h2>What Makes Us Different</h2>  
 <p>At Maridom, we don’t just sell products we deliver solutions.</p>
 </div>
-
 <section id="services2">
-    <div>
-        <h3>Quality Products</h3>
-        A wide selection of premium tires and accessories designed for safety, durability, and performance
-    </div>
-    <div>
-        <h3>Expert Support</h3>
-        From driver training to cost-per-kilometre analysis and scrap evaluation, we help fleets reduce costs and extend tire life
-    </div>
-    <div>
-        <h3>Nationwide Reach</h3>
-        With reliable sales and distribution, we ensure timely delivery across Nigeria
-    </div>
-     <div>
-        <h3>Customer Focus</h3>
-        Our goal is to relieve stress for fleet operators by offering tailored, performance-driven solutions that keep businesses moving
-     </div>
-    <div>
-        <h3>Decade of Experience</h3>
-        Backed by years of industry knowledge, we understand Nigeria’s unique road and fleet challenges
-    </div>
-    <div>
-        <h3>Comprehensive</h3>
-        Beyond tires, we also provide lubricants, batteries, and value-added services for complete fleet care
-    </div>
+  <div>
+    <i class="fas fa-industry"></i>
+    <h3>Quality Products</h3>
+    A wide selection of premium tires and accessories designed for safety, durability, and performance
+  </div>
+  <div>
+    <i class="fas fa-headset"></i>
+    <h3>Expert Support</h3>
+    From driver training to cost-per-kilometre analysis and scrap evaluation, we help fleets reduce costs and extend tire life
+  </div>
+  <div>
+    <i class="fas fa-truck"></i>
+    <h3>Nationwide Reach</h3>
+    With reliable sales and distribution, we ensure timely delivery across Nigeria
+  </div>
+  <div>
+    <i class="fas fa-users"></i>
+    <h3>Customer Focus</h3>
+    Our goal is to relieve stress for fleet operators by offering tailored, performance-driven solutions that keep businesses moving
+  </div>
+  <div>
+    <i class="fas fa-award"></i>
+    <h3>Decade of Experience</h3>
+    Backed by years of industry knowledge, we understand Nigeria’s unique road and fleet challenges
+  </div>
+  <div>
+    <i class="fas fa-cogs"></i>
+    <h3>Comprehensive</h3>
+    Beyond tires, we also provide lubricants, batteries, and value-added services for complete fleet care
+  </div>
 </section>
+
 
 <section id="talk">
 
@@ -220,25 +227,25 @@
   <p><i class="fa fa-envelope" style="font-size:15px;color:orangered;padding-right: 10px;"></i>g.iboro@maridom.org, corporate@maridom.org</p>
 
   <div style="display:flex;align-items:center;gap:10px;">
-  <a href="https://www.facebook.com/share/1C89Amqo7U/?mibextid=wwXIfr" target="_blank" 
+  <a href="" target="_blank" 
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-facebook-f"></i>
   </a>
 
-  <a href="https://www.instagram.com/aim4thestarsuk?igsh=MXh4endtZXRsNmM0dA%3D%3D&utm_source=qr" target="_blank" 
+  <a href="" target="_blank" 
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-instagram"></i>
   </a>
 
-  <a href="https://x.com/yourhandle" target="_blank"
+  <a href="" target="_blank"
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-x-twitter"></i>
   </a>
 
-  <a href="https://www.tiktok.com/@yourhandle" target="_blank"
+  <a href="" target="_blank"
      style="display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;
      border-radius:50%;background-color:#13182F;color:#fff;text-decoration:none;transition:0.3s;">
      <i class="fab fa-tiktok"></i>
