--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         </div>
         <div id="snddiv">
  <ul style="font-weight: 600;">
+  <li><a href=""></a></li>
     <li><a href="index.html"  style="color: #2f3f85;">Home</a>
     </li>
     <li><a href="about.html">About</a></li>
     <li><a href="services.html">Services</a></li>
     <li><a href="team.html">Team</a></li>
+      <li><a href="contact.html" >Contact</a></li>
  </ul>
         </div>
         <div style="text-align: center;">
@@ -153,32 +155,37 @@
  <h2>What Makes Us Different</h2>  
 <p>At Maridom, we don’t just sell products we deliver solutions.</p>
 </div>
-
 <section id="services2">
-    <div>
-        <h3>Quality Products</h3>
-        A wide selection of premium tires and accessories designed for safety, durability, and performance
-    </div>
-    <div>
-        <h3>Expert Support</h3>
-        From driver training to cost-per-kilometre analysis and scrap evaluation, we help fleets reduce costs and extend tire life
-    </div>
-    <div>
-        <h3>Nationwide Reach</h3>
-        With reliable sales and distribution, we ensure timely delivery across Nigeria
-    </div>
-     <div>
-        <h3>Customer Focus</h3>
-        Our goal is to relieve stress for fleet operators by offering tailored, performance-driven solutions that keep businesses moving
-     </div>
-    <div>
-        <h3>Decade of Experience</h3>
-        Backed by years of industry knowledge, we understand Nigeria’s unique road and fleet challenges
-    </div>
-    <div>
-        <h3>Comprehensive</h3>
-        Beyond tires, we also provide lubricants, batteries, and value-added services for complete fleet care
-    </div>
+  <div>
+    <i class="fas fa-industry"></i>
+    <h3>Quality Products</h3>
+    A wide selection of premium tires and accessories designed for safety, durability, and performance
+  </div>
+  <div>
+    <i class="fas fa-headset"></i>
+    <h3>Expert Support</h3>
+    From driver training to cost-per-kilometre analysis and scrap evaluation, we help fleets reduce costs and extend tire life
+  </div>
+  <div>
+    <i class="fas fa-truck"></i>
+    <h3>Nationwide Reach</h3>
+    With reliable sales and distribution, we ensure timely delivery across Nigeria
+  </div>
+  <div>
+    <i class="fas fa-users"></i>
+    <h3>Customer Focus</h3>
+    Our goal is to relieve stress for fleet operators by offering tailored, performance-driven solutions that keep businesses moving
+  </div>
+  <div>
+    <i class="fas fa-award"></i>
+    <h3>Decade of Experience</h3>
+    Backed by years of industry knowledge, we understand Nigeria’s unique road and fleet challenges
+  </div>
+  <div>
+    <i class="fas fa-cogs"></i>
+    <h3>Comprehensive</h3>
+    Beyond tires, we also provide lubricants, batteries, and value-added services for complete fleet care
+  </div>
 </section>
 
 <article style="background-color: #13182F;">
