--- a/team.html
+++ b/team.html
@@ -15,11 +15,13 @@
         </div>
         <div id="snddiv">
  <ul style="font-weight: 600;">
+  <li><a href=""></a></li>
     <li><a href="index.html"  >Home</a>
     </li>
     <li><a href="about.html">About</a></li>
-    <li><a href="services.html" style="color: #2f3f85;">Services</a></li>
-    <li><a href="team.html">Team</a></li>
+    <li><a href="services.html" >Services</a></li>
+    <li><a href="team.html" style="color: #2f3f85;">Team</a></li>
+     <li><a href="contact.html" >Contact</a></li>
  </ul>
         </div>
         <div style="text-align: center;">
@@ -120,6 +122,28 @@
         </div>
     </div>
 </section>
+
+
+
+<div class="what" >
+<h2>Our People, Our Strength</h2>
+<p>We believe in teamwork, innovation, and integrity — values that keep us committed to delivering exceptional service to every fleet we serve</p>
+
+</div>
+<div id="snap">
+  <div>
+    <img src="images/first.jpg" alt="" class="img1">
+  </div>
+  <div>
+    <div>
+      <img src="images/3.jpg" alt="" class="img2">
+    </div>
+    <div id="innerId">
+      <div><img src="images/1.jpg" alt=""></div>
+      <div><img src="images/2.jpg" alt=""></div>
+    </div>
+  </div>
+</div>
 
 
 
