--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <div style="text-align: center;margin-bottom: 40px;">
           <img src="images/logo.png" alt=""> 
         </div>
-        <a href="index.html" onclick="location.reload(); return false;">Home</a>
-
+       <a href="index.html" >Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="team.html">Team</a>
