--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,58 @@
 
 </section>
 
+<div id="contact">
+  <div id="st">
+    <h1>Get in touch</h1>
+    <p>We’re here to answer your questions and provide the right solutions for your fleet</p>
 
+    <div class="contact-details" style="font-weight: 600;">
+      <p><i class="fa-solid fa-location-dot"></i> Abuja, Nigeria</p>
+      <p><i class="fa-solid fa-envelope"></i> g.iboro@maridom.org | corporate@maridom.org</p>
+      <p><i class="fa-solid fa-phone"></i> +234 8102548352 | +234 7039198377</p>
+    </div>
+
+    <p>Follow our social media</p>
+    <div class="socials">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-x-twitter"></i></a>
+      <a href="#"><i class="fab fa-tiktok"></i></a>
+    </div>
+  </div>
+
+  <div>
+    <h2>Send us a message</h2>
+    <form id="form">
+      <div>
+        <label for="fullname">Full name</label><br>
+        <input type="text" id="fullname" name="fullname" placeholder="Full name" required>
+      </div>
+
+      <div>
+        <label for="email">Email Address</label><br>
+        <input type="email" id="email" name="email" placeholder="Email" required>
+      </div>
+
+      <div>
+        <label for="phone">Phone Number</label><br>
+        <input type="tel" id="phone" name="phone" placeholder="Phone" required>
+      </div>
+
+      <div>
+        <label for="subject">Subject</label><br>
+        <input type="text" id="subject" name="subject" placeholder="Enter Subject">
+      </div>
+
+      <div>
+        <label for="message">Message</label><br>
+        <textarea id="message" name="message" placeholder="Write your message..." required></textarea>
+      </div>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</div>
 
 <section id="talk">
 <div style="font-weight: 500;">
