--- a/services.html
+++ b/services.html
@@ -187,13 +187,270 @@
 
 </section>
 
-<div class="what">
- <h2>Featured Products</h2>  
-</div>
+<section>
+  <div class="what">
+    <h2>OUR KEY PRODUCTS</h2>
+  </div>
 
+  <!-- tyres -->
+  <div>
+    <!-- passenger car tires -->
+    <div>
+      <div class="what">
+        <h2>Passenger Car Tyres</h2>
+      </div>
+      <div class="featured">
+        <div>
+          <img src="images/949-Photoroom.png" alt="">
+          <div>
+            <h2>Michelin Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
 
+        <div>
+          <img src="images/4977-Photoroom.png" alt="">
+          <div>
+            <h2>Bridgestone Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
 
+        <div>
+          <img src="images/949-Photoroom (2).png" alt="">
+          <div>
+            <h2>Dunlop Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Industrial and OTR tyres -->
+    <div>
+      <div class="what">
+        <h2>Industrial and OTR Tires</h2>
+      </div>
+      <div class="featured">
+        <div>
+          <img src="images/949-Photoroom.png" alt="">
+          <div>
+            <h2>Michelin Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+
+        <div>
+          <img src="images/4977-Photoroom.png" alt="">
+          <div>
+            <h2>Bridgestone Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+
+        <div>
+          <img src="images/949-Photoroom (2).png" alt="">
+          <div>
+            <h2>Dunlop Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Truck tyres -->
+    <div>
+      <div class="what">
+        <h2>Truck Tires</h2>
+      </div>
+      <div class="featured">
+        <div>
+          <img src="images/949-Photoroom.png" alt="">
+          <div>
+            <h2>Michelin Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+
+        <div>
+          <img src="images/4977-Photoroom.png" alt="">
+          <div>
+            <h2>Bridgestone Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+
+        <div>
+          <img src="images/949-Photoroom (2).png" alt="">
+          <div>
+            <h2>Dunlop Tyre</h2>
+            <p>Built for long haul durability and Nigerian road conditions</p>
+            <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+              <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N150,000</p>
+              <p>N100,000</p>
+            </span>
+            <button onclick="orderNow(this)">Order now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Lubricants and oils -->
+  <div>
+    <div class="what">
+      <h2>Lubricants and Oils</h2>
+    </div>
+    <div class="featured">
+      <div>
+        <img src="images/Gemini_Generated_Image_m7ope7m7ope7m7op-Photoroom 1.png" alt="">
+        <div>
+          <h2>Genesis Lukoil</h2>
+          <p>It’s a quality premium fully synthetic oil</p>
+          <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+            <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N40,000</p>
+            <p>N30,000</p>
+          </span>
+          <button onclick="orderNow(this)">Order now</button>
+        </div>
+      </div>
+
+      <div>
+        <img src="images/Gemini_Generated_Image_m7ope7m7ope7m7op-Photoroom 1.png" alt="">
+        <div>
+          <h2>Genesis Lukoil</h2>
+          <p>It’s a quality premium fully synthetic oil</p>
+          <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+            <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N40,000</p>
+            <p>N30,000</p>
+          </span>
+          <button onclick="orderNow(this)">Order now</button>
+        </div>
+      </div>
+
+      <div>
+        <img src="images/Gemini_Generated_Image_m7ope7m7ope7m7op-Photoroom 1.png" alt="">
+        <div>
+          <h2>Genesis Lukoil</h2>
+          <p>It’s a quality premium fully synthetic oil</p>
+          <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+            <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N40,000</p>
+            <p>N30,000</p>
+          </span>
+          <button onclick="orderNow(this)">Order now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Batteries -->
+  <div>
+    <div class="what">
+      <h2>Batteries</h2>
+    </div>
+    <div class="featured">
+      <div>
+        <img src="images/Thundermax-Battery-75amps-1024x884-Photoroom.png" alt="">
+        <div>
+          <h2>Thundermax</h2>
+          <p>Long-lasting performance with trusted global technology</p>
+          <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+            <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N40,000</p>
+            <p>N30,000</p>
+          </span>
+          <button onclick="orderNow(this)">Order now</button>
+        </div>
+      </div>
+
+      <div>
+        <img src="images/Car_Battery_150AH_12V_Hankook__35164-Photoroom.png" alt="">
+        <div>
+          <h2>Hankook</h2>
+          <p>Reliable, maintenance-free batteries built for everyday driving</p>
+          <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+            <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N40,000</p>
+            <p>N30,000</p>
+          </span>
+          <button onclick="orderNow(this)">Order now</button>
+        </div>
+      </div>
+
+      <div>
+        <img src="images/car-battery-in-nigeria-Photoroom.png" alt="">
+        <div>
+          <h2>Powerline</h2>
+          <p>Dependable starting power for commercial and fleet vehicles.</p>
+          <span style="display: flex;flex-direction: row;justify-content: left;font-weight: bold;">
+            <p style="text-decoration: line-through;color: gray;margin-right: 20px;">N40,000</p>
+            <p>N30,000</p>
+          </span>
+          <button onclick="orderNow(this)">Order now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+function orderNow(button) {
+  const productDiv = button.closest('.featured > div');
+  if (!productDiv) return;
+
+  const productName = productDiv.querySelector('h2')?.innerText || '';
+  const productDesc = productDiv.querySelector('p')?.innerText || '';
+  const price = productDiv.querySelectorAll('p')[1]?.innerText || '';
+  const imageUrl = productDiv.querySelector('img')?.src || '';
+
+  const phoneNumber = "2347030393021";
+  const message = `Hello! I would like to order:\n\n*${productName}*\n${productDesc}\nPrice: ${price}`;
+  const encodedMessage = encodeURIComponent(message);
+  const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodedMessage}`;
+
+  // use the restored native open
+  window.location.href = whatsappURL;
+
+}
+</script>
 
 <div class="what">
  <h2>Customer Testimonials</h2>  
