--- a/team.html
+++ b/team.html
@@ -107,9 +107,8 @@
      <div>
         <img src="images/Gemini_Generated_Image_8lj08s8lj08s8lj0 1 (2).png" alt="">
         <div>
-           <h2>Moses Bot</h2>    
-<p>Finance Director</p>
-<p>The Numbers Strategist</p>  
+           <h2>Stephen Samuel, Mikpidihe</h2>    
+<p>Technical Support Director</p>
         </div>
      </div>
 
